# lapwingsystems

./: .gitignore  lws.slnx
LWS.Alglib/: LWS.Alglib.csproj  alglib_hpc.cs
LWS.Fade25D.Rhino3dm/: LWS.Fade25D.Rhino3dm.csproj  TerrainMeshIO.cs
LWS.Fade25D.Test/: LWS.Fade25D.Test.csproj  TerrainMeshTests.cs
LWS.Fade25D.Test/geotiff/: prospect_small.tif  prospect_small.tif.aux.xml
LWS.Geometry/: Enums.cs  Frame2d.cs  Frame3d.cs  LWS.Geometry.csproj  Pt2d.cs  Pt3d.cs  RootFind.cs  Vec2d.cs  Vec3d.cs
LWS.LandXML/: Alignment.cs  CrossSection.cs  LWS.LandXML.csproj  LandXmlDocument.cs  Profile.cs  ProfileElement.cs
LWS.LandXML.Tests/: LWS.LandXML.Tests.csproj  RoundTripTests.cs
LWS.LandXML.Viewer/: FileBrowser.cs  LWS.LandXML.Viewer.csproj  PlanWindow.cs  ProfileWindow.cs  Program.cs  ViewerApp.cs  ViewportWindow.cs  XSectionWindow.cs
LWS.VerticalProfileOptimisation/: AccessTrack.cs  AccessTrackOptModel.cs  HorizontalAlignment.cs  LWS.VerticalProfileOptimisation.csproj  OptCostModel.cs  OptModel.cs  Optimiser.cs  PWQuadratic.cs  Problem.cs  TODO.md  UtilArray.cs  XSectionCalculator.cs  XSectionParams.cs
LWS.VerticalProfileOptimisation.Tests/: LWS.VerticalProfileOptimisation.Tests.csproj  OptimiserTests.cs  TerrainFactory.cs
cmake/: AddDllDependencies.cmake  AddRuntimeDlls.cmake  CopyRecursiveDependencies.cmake
fade25d/: Fade25dConfig.cmake
fade25d/include/fade25d/: Bbox2.h  CAF_Component.h  Circle2.h  CloudPrepare.h  Color.h  CompPolygon.h  ConstraintGraph2.h  ConstraintSegment2.h  CutAndFill.h  Edge2.h  EfficientModel.h  FadeExport.h  Fade_2D.h  IsoContours.h  Label.h  Lg.h  License.h  MeshGenParams.h  MsgBase.h  PShape.h  Performance.h  Point2.h  PolygonClipper.h  PolygonTree.h  RayShooter.h  Segment2.h  SegmentChecker.h  Triangle2.h  TriangleAroundVertexIterator.h  UserPredicates.h  Vector2.h  VertexPair2.h  Visualizer2.h  Visualizer3.h  VoroCell2.h  VoroVertex2.h  Voronoi2.h  VtkWriter.h  Zone2.h  common.h  (+3 more)
lwsfade25d/: CMakeLists.txt  CMakePresets.json  GDAL.h  GDALRegister.cpp  GDALRegister.h  RayShooter.h  TerrainMesh.cpp  TerrainMesh.h  TerrainTriangle.h  Triangle3.h  TriangleCollection.cpp  TriangleCollection.h  Util.cpp  Util.h  Util.hpp  Vertex3.h  VertexCollection.cpp  VertexCollection.h  VertexIndexMap.cpp  VertexIndexMap.h  interop_utils.cpp  interop_utils.h  lwsfade25d.cpp  math.cpp  math.h
protovertop/: areafit.py  crosssection.py  groundprofile.py  optimise.py  playground.ipynb  problem.py  pwquadratic.py  pyproject.toml  pytest.ini  result.py  vertprofile.py
protovertop/+ss/: CLAUDE.md  IMPLEMENTATION_PLAN.md  qbspline.py
protovertop/docs/: mathematical_model.md  scaling.md
protovertop/tests/: __init__.py  conftest.py  test_areafit.py  test_crosssection.py  test_groundprofile.py  test_optimise_constraints.py  test_optimise_integration.py  test_pwquadratic.py  test_vertprofile.py
protovertop/tests/utils/: assertions.py  fixtures.py  plotting.py
protovertop/theory/: qbspline.ipynb
test/: Program.cs  test.csproj
testexe/: CMakeLists.txt  CMakePresets.json  main.cpp
